changes in service details

--- a/public/index.html
+++ b/public/index.html
@@ -298,17 +298,16 @@
           </h2>
           <p
             class="text-xl sm:text-2xl text-gray-600 mb-10 max-w-4xl mx-auto leading-relaxed">
-            Soluções completas de desenvolvimento com foco em resultados
-            reais
-            e
-            experiência excepcional do usuário
+            Transformamos visitantes em clientes reais. Sites otimizados para
+            <strong>gerar leads</strong> e aumentar suas vendas.
+
           </p>
         </div>
 
         <!-- Services Grid -->
         <div class="space-y-12">
           <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
-            <!-- Site & Landing Pages -->
+            <!-- Sites -->
             <div
               class="service-card group bg-white rounded-3xl p-8 shadow-lg hover:shadow-2xl transition-all duration-500 hover:-translate-y-3 border-t-4 border-accent-500 relative overflow-hidden">
               <div
@@ -327,45 +326,46 @@
                 </div>
 
                 <p class="text-gray-600 mb-8 leading-relaxed text-lg">
-                  Páginas que atraem clientes. Funcionam perfeitamente no celular, tablet e computador.
-
+                  Sites que atraem clientes. Criados para funcionar perfeitamente em qualquer dispositivo e
+                  capturar leads.
                 </p>
 
                 <div class="space-y-4 mb-8">
                   <div class="flex items-start space-x-3">
                     <div
                       class="w-2 h-2 bg-accent-500 rounded-full mt-2 flex-shrink-0"></div>
-                    <span class="text-gray-700 font-medium">Design moderno e
-                      responsivo que funciona em qualquer dispositivo</span>
+                    <span class="text-gray-700 font-medium">Design responsivo
+                      que funciona em celular, tablet e computador</span>
                   </div>
                   <div class="flex items-start space-x-3">
                     <div
                       class="w-2 h-2 bg-accent-500 rounded-full mt-2 flex-shrink-0"></div>
-                    <span class="text-gray-700 font-medium">Formulário de
-                      contato/leads</span>
+                    <span class="text-gray-700 font-medium">Formulários que
+                      capturam dados dos interessados</span>
                   </div>
                   <div class="flex items-start space-x-3">
                     <div
                       class="w-2 h-2 bg-accent-500 rounded-full mt-2 flex-shrink-0"></div>
-                    <span class="text-gray-700 font-medium">SEO avançado: técnicas de desenvolvimento para aparecer mais nas pesquisas</span>
+                    <span class="text-gray-700 font-medium">Otimizado para
+                      aparecer melhor no Google</span>
                   </div>
                   <div class="flex items-start space-x-3">
                     <div
                       class="w-2 h-2 bg-accent-500 rounded-full mt-2 flex-shrink-0"></div>
-                    <span class="text-gray-700 font-medium">Google Analytics</span>
-                  </div>
-
-                  <div class="flex items-start space-x-3">
-                    <div
-                      class="w-2 h-2 bg-accent-500 rounded-full mt-2 flex-shrink-0"></div>
-                    <span class="text-gray-700 font-medium">Hospedagem
-                      inclusa
-                      com SSL</span>
+                    <span class="text-gray-700 font-medium">Relatório inicial do
+                      Google Analytics configurado</span>
                   </div>
                   <div class="flex items-start space-x-3">
                     <div
                       class="w-2 h-2 bg-accent-500 rounded-full mt-2 flex-shrink-0"></div>
-                    <span class="text-gray-700 font-medium">Incluído 5 contas de e-mail</span>
+                    <span class="text-gray-700 font-medium">Hospedagem segura
+                      inclusa (SSL automático)</span>
+                  </div>
+                  <div class="flex items-start space-x-3">
+                    <div
+                      class="w-2 h-2 bg-accent-500 rounded-full mt-2 flex-shrink-0"></div>
+                    <span class="text-gray-700 font-medium">5 contas de email
+                      profissionais (1GB cada) na hospedagem</span>
                   </div>
                 </div>
 
@@ -377,8 +377,7 @@
                 </a>
               </div>
             </div>
-
-            <!-- Sistemas Web -->
+            <!-- Sistemas -->
             <div
               class="service-card group bg-white rounded-3xl p-8 shadow-lg hover:shadow-2xl transition-all duration-500 hover:-translate-y-3 border-t-4 border-highlight-500 relative overflow-hidden">
               <div
@@ -388,50 +387,62 @@
                   <div
                     class="p-3 bg-highlight-100 rounded-2xl mr-4 group-hover:scale-110 transition-transform duration-300">
                     <img src="./assets/images/logos/dharma-labs-main.svg"
-                      alt="Cubo de Metatron" class="w-12 h-12" />
+                      alt="Flor da Vida" class="w-12 h-12" />
                   </div>
                   <h3
                     class="text-2xl font-bold text-primary-900 group-hover:text-primary-700 transition-colors">
-                    Sistemas Web
+                    Sistemas Personalizados
                   </h3>
                 </div>
 
                 <p class="text-gray-600 mb-8 leading-relaxed text-lg">
-                  Sistemas personalizados para automatizar processos,
-                  otimizar
-                  a gestão e integrar todos os setores do seu negócio.
+                  Sistemas web feitos sob medida para organizar e automatizar
+                  seu negócio.
+                  Elimina planilhas confusas e trabalho manual repetitivo.
                 </p>
 
                 <div class="space-y-4 mb-8">
                   <div class="flex items-start space-x-3">
                     <div
                       class="w-2 h-2 bg-highlight-500 rounded-full mt-2 flex-shrink-0"></div>
-                    <span class="text-gray-700 font-medium">Sistema
-                      personalizado sob medida</span>
+                    <span class="text-gray-700 font-medium">Sistema desenvolvido
+                      especificamente para sua empresa</span>
                   </div>
                   <div class="flex items-start space-x-3">
                     <div
                       class="w-2 h-2 bg-highlight-500 rounded-full mt-2 flex-shrink-0"></div>
-                    <span class="text-gray-700 font-medium">Painel
-                      administrativo completo</span>
+                    <span class="text-gray-700 font-medium">Painel de controle
+                      simples e intuitivo</span>
                   </div>
                   <div class="flex items-start space-x-3">
                     <div
                       class="w-2 h-2 bg-highlight-500 rounded-full mt-2 flex-shrink-0"></div>
-                    <span class="text-gray-700 font-medium">Automatização de
-                      processos</span>
+                    <span class="text-gray-700 font-medium">Automatiza tarefas
+                      repetitivas do dia a dia</span>
                   </div>
                   <div class="flex items-start space-x-3">
                     <div
                       class="w-2 h-2 bg-highlight-500 rounded-full mt-2 flex-shrink-0"></div>
-                    <span class="text-gray-700 font-medium">Integração com
-                      APIs externas</span>
+                    <span class="text-gray-700 font-medium">Importa dados de
+                      planilhas existentes</span>
+                  </div>
+                  <div class="flex items-start space-x-3">
+                    <div
+                      class="w-2 h-2 bg-highlight-500 rounded-full mt-2 flex-shrink-0"></div>
+                    <span class="text-gray-700 font-medium">Exporta relatórios
+                      quando precisar</span>
                   </div>
                   <div class="flex items-start space-x-3">
                     <div
                       class="w-2 h-2 bg-highlight-500 rounded-full mt-2 flex-shrink-0"></div>
                     <span class="text-gray-700 font-medium">Banco de dados
-                      robusto e seguro</span>
+                      seguro e confiável</span>
+                  </div>
+                  <div class="flex items-start space-x-3">
+                    <div
+                      class="w-2 h-2 bg-highlight-500 rounded-full mt-2 flex-shrink-0"></div>
+                    <span class="text-gray-700 font-medium">Hospedagem com 5 contas de email
+                      profissionais (1GB cada)</span>
                   </div>
                 </div>
 
@@ -443,8 +454,7 @@
                 </a>
               </div>
             </div>
-
-            <!-- Dashboards & Analytics -->
+            <!-- Dashboards -->
             <div
               class="service-card group bg-white rounded-3xl p-8 shadow-lg hover:shadow-2xl transition-all duration-500 hover:-translate-y-3 border-t-4 border-accent-500 relative overflow-hidden">
               <div
@@ -454,53 +464,57 @@
                   <div
                     class="p-3 bg-accent-100 rounded-2xl mr-4 group-hover:scale-110 transition-transform duration-300">
                     <img src="./assets/images/logos/dharma-labs-main.svg"
-                      alt="Mandala Digital" class="w-12 h-12" />
+                      alt="Flor da Vida" class="w-12 h-12" />
                   </div>
                   <h3
                     class="text-2xl font-bold text-primary-900 group-hover:text-primary-700 transition-colors">
-                    Dashboards & Analytics
+                    Dashboards Visuais
                   </h3>
                 </div>
 
                 <p class="text-gray-600 mb-8 leading-relaxed text-lg">
-                  Painéis interativos e inteligentes para visualização de
-                  métricas, análises preditivas e insights do seu negócio em
-                  tempo real.
+                  Dashboards que transformam suas planilhas em gráficos claros e
+                  fáceis de entender.
+                  <strong>Sistema web ou instalação local</strong> - você
+                  escolhe o que é melhor para sua empresa.
                 </p>
 
                 <div class="space-y-4 mb-8">
                   <div class="flex items-start space-x-3">
                     <div
                       class="w-2 h-2 bg-accent-500 rounded-full mt-2 flex-shrink-0"></div>
-                    <span class="text-gray-700 font-medium">Visualização
-                      clara
-                      de dados</span>
+                    <span class="text-gray-700 font-medium">Gráficos bonitos e
+                      fáceis de entender</span>
                   </div>
                   <div class="flex items-start space-x-3">
                     <div
                       class="w-2 h-2 bg-accent-500 rounded-full mt-2 flex-shrink-0"></div>
-                    <span class="text-gray-700 font-medium">Relatórios
-                      automáticos e personalizados</span>
+                    <span class="text-gray-700 font-medium">Conecta com
+                      planilhas do Google Sheets, Excel ou CSV</span>
                   </div>
                   <div class="flex items-start space-x-3">
                     <div
                       class="w-2 h-2 bg-accent-500 rounded-full mt-2 flex-shrink-0"></div>
-                    <span class="text-gray-700 font-medium">Métricas em
-                      tempo
-                      real</span>
+                    <span class="text-gray-700 font-medium">Atualização
+                      automática dos dados</span>
                   </div>
                   <div class="flex items-start space-x-3">
                     <div
                       class="w-2 h-2 bg-accent-500 rounded-full mt-2 flex-shrink-0"></div>
-                    <span class="text-gray-700 font-medium">Integração com
-                      planilhas e bancos de dados</span>
+                    <span class="text-gray-700 font-medium">Versão web (online)
+                      ou sistema local (seu computador)</span>
                   </div>
                   <div class="flex items-start space-x-3">
                     <div
                       class="w-2 h-2 bg-accent-500 rounded-full mt-2 flex-shrink-0"></div>
-                    <span class="text-gray-700 font-medium">Alertas e
-                      insights
-                      inteligentes com IA</span>
+                    <span class="text-gray-700 font-medium">Exporta relatórios
+                      em PDF quando precisar</span>
+                  </div>
+                  <div class="flex items-start space-x-3">
+                    <div
+                      class="w-2 h-2 bg-accent-500 rounded-full mt-2 flex-shrink-0"></div>
+                    <span class="text-gray-700 font-medium">Na hospedagem, 5 contas de email
+                      profissionais (1GB cada)</span>
                   </div>
                 </div>
 
@@ -512,6 +526,55 @@
                 </a>
               </div>
             </div>
+          </div>
+        </div>
+
+        <!-- Tech Stack Benefits -->
+        <div class="mt-20 grid grid-cols-1 md:grid-cols-3 gap-8">
+          <div
+            class="text-center p-8 bg-white/5 backdrop-blur-sm rounded-2xl border border-white/10">
+            <div
+              class="w-16 h-16 bg-white/10 rounded-2xl flex items-center justify-center mx-auto mb-6">
+              <span class="text-3xl"><i
+                  class="fa-solid fa-bolt text-accent-500"></i></span>
+            </div>
+            <h3
+              class="text-2xl font-bold mb-4 text-primary-900 group-hover:text-primary-700 transition-colors">Performance
+              Superior</h3>
+            <p class="text-primary leading-relaxed">
+              Sites que carregam rapidamente, otimizados para todos os
+              dispositivos
+            </p>
+          </div>
+
+          <div
+            class="text-center p-8 bg-white/5 backdrop-blur-sm rounded-2xl border border-white/10">
+            <div
+              class="w-16 h-16 bg-white/10 rounded-2xl flex items-center justify-center mx-auto mb-6">
+              <span class="text-3xl"><i
+                  class="fa-solid fa-lock text-highlight-600"></i></span>
+            </div>
+            <h3
+              class="text-2xl font-bold mb-4 text-primary-900 group-hover:text-primary-700 transition-colors">Segurança
+              Avançada</h3>
+            <p class="text-primary leading-relaxed">
+              Proteção contra ataques, SSL, backup automático e conformidade
+              LGPD
+            </p>
+          </div>
+
+          <div
+            class="text-center p-8 bg-white/5 backdrop-blur-sm rounded-2xl border border-white/10">
+            <div
+              class="w-16 h-16 bg-white/10 rounded-2xl flex items-center justify-center mx-auto mb-6">
+              <span class="text-3xl"><i
+                  class="fa-solid fa-crosshairs text-primary-600"></i></span>
+            </div>
+            <h3
+              class="text-2xl font-bold mb-4 text-primary-900 group-hover:text-primary-700 transition-colors">Escalabilidade</h3>
+            <p class="text-primary leading-relaxed">
+              Arquitetura que cresce com seu negócio, sem limitações técnicas
+            </p>
           </div>
         </div>
       </div>
@@ -681,12 +744,14 @@
             <span class="w-2 h-2 bg-highlight-500 rounded-full mr-2"></span>
             Nossos Resultados
           </div>
-          <h2 class="text-4xl sm:text-5xl lg:text-6xl font-bold text-primary-900 mb-6">
+          <h2
+            class="text-4xl sm:text-5xl lg:text-6xl font-bold text-primary-900 mb-6">
             Projetos com <span class="gradient-text">Resultados Reais</span>
           </h2>
           <p
             class="text-xl sm:text-2xl text-gray-600 mb-10 max-w-4xl mx-auto leading-relaxed">
-            Métricas que comprovam: nossos sites <strong>realmente funcionam</strong>
+            Métricas que comprovam: nossos sites <strong>realmente
+              funcionam</strong>
           </p>
         </div>
 
@@ -717,8 +782,8 @@
                 class="relative overflow-hidden rounded-2xl bg-white p-8 shadow-lg">
                 <div class="client-logos-scroll flex items-center space-x-8"
                   id="client-logos-page"> -->
-                  <!-- Logos será adicionado via JavaScript -->
-                <!-- </div>
+            <!-- Logos será adicionado via JavaScript -->
+            <!-- </div>
               </div>
             </div> -->
 
