adjustments in products section

--- a/public/index.html
+++ b/public/index.html
@@ -286,7 +286,7 @@
       class="py-20 lg:py-28 bg-gray-50">
       <div class="container mx-auto px-4 sm:px-6 lg:px-8">
         <!-- Enhanced Section Header -->
-        <div class="text-center mb-20">
+        <div class="text-center mb-15">
           <div
             class="inline-flex items-center bg-highlight-100 text-highlight-700 px-4 py-2 rounded-full text-sm font-medium mb-4">
             <span class="w-2 h-2 bg-highlight-500 rounded-full mr-2"></span>
@@ -305,7 +305,7 @@
         </div>
 
         <!-- Services Grid -->
-        <div class="space-y-12">
+        <div class="space-y-12 mb-16">
           <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
             <!-- Sites -->
             <div
@@ -326,7 +326,8 @@
                 </div>
 
                 <p class="text-gray-600 mb-8 leading-relaxed text-lg">
-                  Sites que atraem clientes. Criados para funcionar perfeitamente em qualquer dispositivo e
+                  Sites que atraem clientes. Criados para funcionar
+                  perfeitamente em qualquer dispositivo e
                   capturar leads.
                 </p>
 
@@ -441,7 +442,8 @@
                   <div class="flex items-start space-x-3">
                     <div
                       class="w-2 h-2 bg-highlight-500 rounded-full mt-2 flex-shrink-0"></div>
-                    <span class="text-gray-700 font-medium">Hospedagem com 5 contas de email
+                    <span class="text-gray-700 font-medium">Hospedagem com 5
+                      contas de email
                       profissionais (1GB cada)</span>
                   </div>
                 </div>
@@ -513,7 +515,8 @@
                   <div class="flex items-start space-x-3">
                     <div
                       class="w-2 h-2 bg-accent-500 rounded-full mt-2 flex-shrink-0"></div>
-                    <span class="text-gray-700 font-medium">Na hospedagem, 5 contas de email
+                    <span class="text-gray-700 font-medium">Na hospedagem, 5
+                      contas de email
                       profissionais (1GB cada)</span>
                   </div>
                 </div>
@@ -529,53 +532,72 @@
           </div>
         </div>
 
-        <!-- Tech Stack Benefits -->
-        <div class="mt-20 grid grid-cols-1 md:grid-cols-3 gap-8">
+        <!-- Beneficios -->
+        <div class="text-center mb-10">
           <div
-            class="text-center p-8 bg-white/5 backdrop-blur-sm rounded-2xl border border-white/10">
+            class="inline-flex items-center bg-highlight-100 text-highlight-700 px-4 py-2 rounded-full text-sm font-medium mb-4">
+            <span class="w-2 h-2 bg-highlight-500 rounded-full mr-2"></span>
+            Por que escolher a Dharma Labs
+          </div>
+          <h2 class="text-4xl sm:text-5xl font-bold text-primary-900 mb-6">
+            O que nos torna <span class="gradient-text">diferentes</span>
+          </h2>
+          <p
+            class="text-xl sm:text-2xl text-gray-600 max-w-3xl mx-auto leading-relaxed">
+            Tecnologia de qualidade com <strong>foco no seu resultado</strong>
+          </p>
+        </div>
+
+        <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+
+          <!-- Card 1: Performance -->
+          <div
+            class="text-center p-8 bg-white/5 backdrop-blur-sm rounded-2xl border border-white/10 hover:bg-white/10 transition-all duration-300">
             <div
               class="w-16 h-16 bg-white/10 rounded-2xl flex items-center justify-center mx-auto mb-6">
               <span class="text-3xl"><i
-                  class="fa-solid fa-bolt text-accent-500"></i></span>
+                  class="fa-solid fa-rocket text-accent-500"></i></span>
             </div>
-            <h3
-              class="text-2xl font-bold mb-4 text-primary-900 group-hover:text-primary-700 transition-colors">Performance
-              Superior</h3>
+            <h3 class="text-2xl font-bold mb-4 text-primary-900">Sites
+              Rápidos</h3>
             <p class="text-primary leading-relaxed">
-              Sites que carregam rapidamente, otimizados para todos os
-              dispositivos
+              Carregamento rápido. Clientes não esperam - convertem
+              mais rápido.
             </p>
           </div>
 
+          <!-- Card 2: Segurança -->
           <div
-            class="text-center p-8 bg-white/5 backdrop-blur-sm rounded-2xl border border-white/10">
+            class="text-center p-8 bg-white/5 backdrop-blur-sm rounded-2xl border border-white/10 hover:bg-white/10 transition-all duration-300">
             <div
               class="w-16 h-16 bg-white/10 rounded-2xl flex items-center justify-center mx-auto mb-6">
               <span class="text-3xl"><i
-                  class="fa-solid fa-lock text-highlight-600"></i></span>
+                  class="fa-solid fa-shield-halved text-highlight-600"></i></span>
             </div>
-            <h3
-              class="text-2xl font-bold mb-4 text-primary-900 group-hover:text-primary-700 transition-colors">Segurança
-              Avançada</h3>
+            <h3 class="text-2xl font-bold mb-4 text-primary-900">Sempre
+              Seguro</h3>
             <p class="text-primary leading-relaxed">
-              Proteção contra ataques, SSL, backup automático e conformidade
-              LGPD
+              Proteção automática, backups diários. Você nunca perde informações
+              importantes.
             </p>
           </div>
 
+          <!-- Card 3: Escalabilidade -->
           <div
-            class="text-center p-8 bg-white/5 backdrop-blur-sm rounded-2xl border border-white/10">
+            class="text-center p-8 bg-white/5 backdrop-blur-sm rounded-2xl border border-white/10 hover:bg-white/10 transition-all duration-300">
             <div
               class="w-16 h-16 bg-white/10 rounded-2xl flex items-center justify-center mx-auto mb-6">
               <span class="text-3xl"><i
-                  class="fa-solid fa-crosshairs text-primary-600"></i></span>
+                  class="fa-solid fa-chart-line text-primary-600"></i></span>
             </div>
-            <h3
-              class="text-2xl font-bold mb-4 text-primary-900 group-hover:text-primary-700 transition-colors">Escalabilidade</h3>
+            <h3 class="text-2xl font-bold mb-4 text-primary-900">Cresce
+              Junto</h3>
             <p class="text-primary leading-relaxed">
-              Arquitetura que cresce com seu negócio, sem limitações técnicas
+              Começamos simples, evoluímos conforme sua empresa cresce. Sem
+              recomeçar do zero.
             </p>
           </div>
+
         </div>
       </div>
     </section>
@@ -620,18 +642,18 @@
         <!-- Produtos Grid -->
         <div class="grid grid-cols-1 lg:grid-cols-2 gap-8 max-w-6xl mx-auto">
 
-          <!-- BioCard Preview -->
+          <!-- Bio Page -->
           <div
             class="bg-white rounded-3xl p-8 shadow-xl hover:shadow-2xl transition-all duration-500 border-l-4 border-accent-500 relative overflow-hidden">
             <div
-              class="absolute -top-4 -right-4 bg-accent-500 text-white px-4 py-2 rounded-full text-sm font-bold transform rotate-12">
+              class="absolute top-4 right-4 bg-accent-500 text-white px-3 py-1 rounded-full text-xs font-bold">
               Em Breve
             </div>
-
             <div class="flex items-center mb-6">
               <div
-                class="p-3 bg-gradient-to-r from-accent-100 to-accent-200 rounded-2xl mr-4">
-                <i class="fas fa-mobile-alt text-2xl text-accent-600"></i>
+                class="p-3 bg-accent-100 rounded-2xl mr-4 group-hover:scale-110 transition-transform duration-300">
+                <img src="./assets/images/logos/dharma-labs-main.svg"
+                  alt="Flor da Vida" class="w-12 h-12" />
               </div>
               <div>
                 <h3 class="text-2xl font-bold text-primary-900">BioCard</h3>
@@ -641,21 +663,22 @@
             </div>
 
             <p class="text-gray-600 mb-6 text-lg">
-              <strong>Muito mais que links:</strong> Mini sistemas, PIX
+              <strong>Não são apenas links:</strong> Mini sistemas, PIX
               integrado, automações inteligentes.
-              O Linktree brasileiro com superpoderes.
+              O agregador de links brasileiro com superpoderes.
             </p>
 
-            <div
-              class="bg-gradient-to-r from-accent-50 to-transparent p-4 rounded-lg mb-6">
-              <h4 class="font-semibold text-primary-900 mb-2">🇧🇷 100%
+            <div class="mb-6">
+              <h4 class="font-semibold text-primary-900 mb-3">🇧🇷 100%
                 Brasileiro:</h4>
-              <ul class="text-sm text-gray-700 space-y-1">
-                <li>• PIX com QR codes automáticos</li>
-                <li>• WhatsApp Business nativo</li>
-                <li>• Cards programados por data/hora</li>
-                <li>• Mini sistemas (calculadoras, formulários)</li>
-              </ul>
+              <div class="grid grid-cols-2 gap-2 text-sm text-gray-700">
+                <div>• PIX com QR codes automáticos</div>
+                <div>• WhatsApp Business nativo</div>
+                <div>• Faça sua personalização</div>
+                <div>• Cards programados por data/hora</div>
+                <div>• Mini sistemas (calculadoras, formulários)</div>
+                <div>• Desenvolvemos sugestões</div>
+              </div>
             </div>
 
             <div class="flex justify-between items-center mb-6">
@@ -664,25 +687,33 @@
                 <div class="text-2xl font-bold text-primary-900">Gratuito</div>
               </div>
               <div class="text-right">
-                <div class="text-sm text-accent-600 font-medium">⚡ Drag &
-                  Drop</div>
+                <div class="text-sm text-accent-600 font-medium">
+                  <i class="fa-solid fa-bolt"
+                    style="color: #eab308 !important;"></i> Drag & Drop
+                </div>
                 <div class="text-xs text-gray-500">Interface visual</div>
               </div>
             </div>
 
-            <button class="btn-secondary w-full" disabled>
-              <i class="fas fa-bell mr-2"></i>
+            <!-- <button class="btn-secondary w-full text-primary-900" disabled>
+              <i class="fas fa-bell mr-2 text-primary-900"></i>
               Cadastrar para Early Access
-            </button>
+            </button> -->
+            <div class="text-center text-gray-500 text-sm font-medium">
+              <i class="fas fa-code mr-2"></i>
+              Em desenvolvimento - Lançamento em breve
+            </div>
           </div>
 
           <!-- Sistemas Web Modulares -->
           <div
             class="bg-white rounded-3xl p-8 shadow-xl hover:shadow-2xl transition-all duration-500 border-l-4 border-primary-500">
+
             <div class="flex items-center mb-6">
               <div
-                class="p-3 bg-gradient-to-r from-primary-100 to-primary-200 rounded-2xl mr-4">
-                <i class="fas fa-cogs text-2xl text-primary-600"></i>
+                class="p-3 bg-accent-100 rounded-2xl mr-4 group-hover:scale-110 transition-transform duration-300">
+                <img src="./assets/images/logos/dharma-labs-main.svg"
+                  alt="Flor da Vida" class="w-12 h-12" />
               </div>
               <div>
                 <h3 class="text-2xl font-bold text-primary-900">Sistemas
@@ -698,10 +729,11 @@
               adicionamos módulos conforme você cresce.
             </p>
 
-            <div
-              class="bg-gradient-to-r from-primary-50 to-transparent p-4 rounded-lg mb-6">
-              <h4 class="font-semibold text-primary-900 mb-2">⚡ Módulos
-                Disponíveis:</h4>
+            <div class="mb-6">
+              <h4 class="font-semibold text-primary-900 mb-3">
+                <i class="fa-solid fa-bolt"
+                  style="color: #eab308 !important;"></i> Módulos Disponíveis:
+              </h4>
               <div class="grid grid-cols-2 gap-2 text-sm text-gray-700">
                 <div>• Imobiliário</div>
                 <div>• Restaurante</div>
@@ -719,16 +751,20 @@
                     class="text-base text-gray-600">/mês</span></div>
               </div>
               <div class="text-right">
-                <div class="text-sm text-blue-600 font-medium">💡 Consulta
-                  Gratuita</div>
+                <div class="text-sm text-primary-700 font-medium">
+                  <i class="fa-solid fa-lightbulb"
+                    style="color: #eab308 !important;"></i> Consulta Gratuita
+                </div>
                 <div class="text-xs text-gray-500">Análise personalizada</div>
               </div>
             </div>
 
-            <a href="precos.html#sistemas" class="btn-primary w-full">
+            <a href="precos.html#sistemas"
+              class="btn-primary w-full text-center inline-block py-3 rounded-2xl font-semibold text-white no-underline">
               Agendar Consultoria Gratuita
             </a>
           </div>
+
         </div>
       </div>
     </section>
@@ -748,11 +784,11 @@
             class="text-4xl sm:text-5xl lg:text-6xl font-bold text-primary-900 mb-6">
             Projetos com <span class="gradient-text">Resultados Reais</span>
           </h2>
-          <p
+          <!-- <p
             class="text-xl sm:text-2xl text-gray-600 mb-10 max-w-4xl mx-auto leading-relaxed">
             Métricas que comprovam: nossos sites <strong>realmente
               funcionam</strong>
-          </p>
+          </p> -->
         </div>
 
         <div class="max-w-4xl mx-auto text-center" style="display: block;"
@@ -767,11 +803,14 @@
               </div>
             </div>
 
-            <h3 class="text-2xl font-bold text-primary-900 mb-4">
+            <!-- <h3 class="text-2xl font-bold text-primary-900 mb-4">
               Nossos Projetos
-            </h3>
+            </h3> -->
             <p class="text-lg text-gray-700 mb-8 leading-relaxed">
-              <i class="fa-solid fa-person-digging"></i>
+              <span class="text-highlight-400 text-4xl"><i
+                  class="fa-solid fa-person-digging"></i></span>
+            </p>
+            <p class="text-lg text-gray-700 mb-8 leading-relaxed">
               Seção em construção!<br>
             </p>
 
@@ -945,25 +984,25 @@
           </div>
 
           <!-- Trust Indicators -->
-          <div class="grid grid-cols-3 md:grid-cols-3 gap-8 text-center">
-            <!-- <div class="p-6">
-              <div class="text-4xl font-bold text-accent-400 mb-2">+50</div>
-              <div class="text-primary-200 text-sm">Projetos Entregues</div>
-            </div> -->
-            <div class="p-6">
+          <div
+            class="grid grid-cols-3 md:grid-cols-3 gap-4 md:gap-8 text-center">
+            <div class="p-3 md:p-6">
               <div
-                class="text-4xl font-bold text-highlight-400 mb-2">24/7</div>
-              <div class="text-primary-200 text-sm">Suporte Técnico</div>
+                class="text-2xl md:text-4xl font-bold text-accent-400 mb-1 md:mb-2">7-60</div>
+              <div class="text-primary-200 text-xs md:text-sm">Dias de
+                Entrega</div>
             </div>
-            <div class="p-6">
+            <div class="p-3 md:p-6">
               <div
-                class="text-4xl font-bold text-accent-400 mb-2">100%</div>
-              <div class="text-primary-200 text-sm">Satisfação</div>
+                class="text-2xl md:text-4xl font-bold text-highlight-400 mb-1 md:mb-2">5</div>
+              <div class="text-primary-200 text-xs md:text-sm">Revisões
+                Incluídas</div>
             </div>
-            <div class="p-6">
+            <div class="p-3 md:p-6">
               <div
-                class="text-4xl font-bold text-highlight-400 mb-2">2h</div>
-              <div class="text-primary-200 text-sm">Tempo Resposta</div>
+                class="text-2xl md:text-4xl font-bold text-accent-400 mb-1 md:mb-2">24h</div>
+              <div class="text-primary-200 text-xs md:text-sm">Resposta (Dias
+                Úteis)</div>
             </div>
           </div>
         </div>
